# RNN-T

./: README.md  pyproject.toml
rnnt/: main.py
rnnt/config/: config.py  config.yaml
rnnt/model/: decoder.py  encoder.py  prediction_network.py  rnnt.py
rnnt/preprocess/: logmelspectogram.py  slice.py
tests/: test_rnnt.py
